# sucharu-theme-icon

./: README.md  meson.build  meson_options.txt  test-sucharu
.github/: FUNDING.yml
common/: accent-colors.scss.in  sucharu-colors-defs.scss
debian/: changelog  control  copyright  not-installed  rules
gtk/src/: meson.build
gtk/src/default/gtk-3.0/: gtk-dark.scss  gtk-darker.scss  gtk.scss
gtk/src/default/gtk-3.0/sass/: _colors.scss  _sucharu-colors.scss
icons/: meson.build
icons/meson/: post_install.py
icons/src/: README.md  Sucharu.gpl  find-symlink.sh  generate-index-theme.py
icons/src/fullcolor/: README.md  render-bitmaps.py
icons/src/scalable/: README.md  extract-symbolic-icons.rb  find-duplicates.sh  render-symbolic-icons.sh
icons/src/symlinks/: generate-symlinks.sh
icons/src/symlinks/fullcolor/: actions.list  apps.list  categories.list  emblems.list  legacy.list  places.list  status.list
icons/src/symlinks/symbolic/: actions.list  apps.list  categories.list  devices.list  hicolor.list  places.list  status.list  ui.list
