option('icons', type: 'boolean', value: true, description:'build icons component')
# option('cursors', type: 'boolean', value: true, description:'build icons component')
option('gtk', type: 'boolean', value: true, description:'build gtk component')

option('default', type: 'boolean', value: true, description:'build Sucharu default flavour')
option('dark', type: 'boolean', value: true, description:'build Sucharu dark flavour')
option('ubuntu-unity', type: 'boolean', value: false, description:'build Sucharu with Unity assets')

# We use the dark flat above to do the dark variants of them
option('accent-colors',
    type: 'array',
    choices: [
        # 'aqua',
        # 'blue',
        # 'brown',
        # 'grey',
        # 'orange',
        # 'pink',
        # 'purple',
        # 'red',
        # 'sand',
        # 'teal',
    ],
)
